# 2026-01January-python

./: 2026-01January-06.ipynb  2026-01January-13.ipynb  pyproject.toml
